# WeSeeker_v2

./: .gitignore  README.md
Weseeker/: pyproject.toml  settings.yaml
Weseeker/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
Weseeker/frontend/src/: App.jsx  api.js  index.css  reducer.js
Weseeker/frontend/src/components/: Collapsible.jsx  Composer.jsx  Conversation.jsx  EventTimeline.jsx  InterruptCard.jsx  Markdown.jsx  ToolBlock.jsx
Weseeker/scripts/: run_agent.py  start_mcp_servers.py  start_web.py
Weseeker/src/adapters/: mcp_client.py  model_provider.py  preview_summarizer.py
Weseeker/src/agent/: factory.py  runner.py  state.py
Weseeker/src/config/: settings.py
Weseeker/src/config/prompts/: summary_prompt.md  system_prompt.md
Weseeker/src/listeners/: cli.py  web.py  web_event_normalizer.py
Weseeker/src/mcp_servers/file_tools/: client_state.py  folder.py  reader.py  search.py  sender.py  server.py
Weseeker/src/mcp_servers/file_tools/utils/: candidate_registry.py  everything_client.py  file_extractors.py  file_filter.py  path_resolver.py  pending_send_registry.py  time_format.py  tool_response.py
Weseeker/src/mcp_servers/rag_tools/: __init__.py  pdf_chunk_test.py  query_kb_test.py  run_rag_test.py
Weseeker/src/mcp_servers/rag_tools/adapters/: __init__.py  batched_embedder.py  embedding_provider.py
Weseeker/src/middleware/: message_normalizer.py  preview_summary.py  tool_call_limit.py
Weseeker/tests/unit/: test_file_extractors.py  test_model_provider.py
(+15 files in other folders)
